# web-genie-ai

./: .env.miner.example  .env.validator.example  .gitignore  CHANGELOG.md  README.md  auto_update.sh  genie_validator.py  ground_truth.html  lang_chain_test.py  min_compute.yml  pyproject.toml  requirements.txt  run_miner.sh  run_miners.sh  run_validator copy.sh  run_validator.sh  schema.er  setup.py  state.json  test.npz  uids.py  validator.py  webgenie-validator.db  webgenie.db
btcopilot/: miner.py  protocol.py
btcopilot/base/: miner.py  neuron.py  validator.py
btcopilot/miners/: dummy_miner.py
btcopilot/rewards/: __init__.py  gpt.py  penalty.py  reward_manager.py
btcopilot/task_generator/: __init__.py
btcopilot/tasks/: task.py
btcopilot/utils/: config.py  uids.py
btcopilot/validator/: __init__.py  forward.py  organic_forward.py
contrib/: CONTRIBUTING.md
docs/: miner.md  miner_compute.yml  running_on_mainnet.md  running_on_staging.md  running_on_testnet.md  validator.md  validator_compute.yml
docs/stream_tutorial/: client.py
neurons/: miner.py  protocol.py  validator.py
neurons/miners/: hf_miner.py  miner.py  openai_miner.py
neurons/validators/: genie_validator.py  models.py  score_manager.py  validator.py
scripts/: install_requirements.sh  install_staging.sh  start.sh
storage/: __init__.py  models.py  utils.py
template/: __init__.py
template/api/: dummy.py
template/validator/: forward.py
tests/: init_test.py  test_clip.py  test_llms.py  test_openai_miner.py  test_reward.py  test_submit_results.py  test_template_validator.py
tests/data/: test_p.html  test_p_1.html
tests/datasets/: test_huggingface_dataset.py  test_randomwebsite_dataset.py
tests/rewards/: test_lighthouse.py  test_visual_score.py
wandb/: latest-run
wandb/run-20241212_080228-fmmfb2d8/: run-fmmfb2d8.wandb
wandb/run-20241212_080410-p5q8p631/: run-p5q8p631.wandb
webgenie/: __init__.py  constants.py  prompts.py  protocol.py
webgenie/api/: dummy.py
webgenie/base/: miner.py  neuron.py  validator.py
work _save/: miner1.html  miner3.html  miner6.html  original.html
(+96 files in other folders)
